# curvature-scale-space-corners-and-transformations

./: .gitignore  1  BuildAndUse.md  LICENSE.txt  ProjectHome.md  README.txt  README2.txt  README_old.txt  ant_run_jacoco.xml  build-smc.xml  build.xml  gev.html  index.html  params.json  refactor.txt  run_jacoco_reports.sh  texture.txt  todo.txt
aspects/: aj-files_processing_debug.txt
data/: dbscan.txt
doc/: matrix.txt  notes_rectification_to_3D.txt  pointmatcher_diagram.txt  projective_structure_and_motion.txt  refactor.txt  sat_and_other_proposition_logic_solvers.txt  story_tasks.txt
doc/algorithm_notes/: distance_and_range_sensors.txt  fundamental_cube_roots.txt  geometric_median.txt  lda_notes.txt  notes_rectification_to_3D.txt
doc/api/: allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-frame.html  overview-summary.html  overview-tree.html  package-list  package-search-index.js  search.html  serialized-form.html  type-search-index.js
doc/jdepend/: jdepend-report.html
doc/stories/: story_tasks_002.txt  story_tasks_003.txt  story_tasks_004.txt  story_tasks_005.txt  story_tasks_006.txt  story_tasks_007.txt
docs/api/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
docs/coverage/: coverage.emma  coverage.html  coverage.txt  metadata.emma
docs/tasks/: design_distance_transform_improvements.txt
dtrace/: dtrace.html  j_flow.d  j_flow_jni2.d  j_flow_obj_alloc.d  logging.properties  notes.txt
lib/: CLUSTERING.txt  EJML_LICENSE.txt  JFREECHART_LICENSE.txt  Jama_LICENSE.txt  LA4J_LICENSE.txt  MTJ_LICENSE.txt  NETLIB-JAVA.tst  SHARED.txt  netlib_notes.txt
lib/emma/: emma_license.txt
lib/findbugs/: findbugs_license.txt
miscNotes/: fma_ffm.txt  spin_glass.txt  transfer_functions.txt
other/GEVSimilarity/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac  pom.xml
other/GEVSimilarity/docs/coverage/: index-sort-f.html  index-sort-l.html  index.html
other/GEVSimilarity/docs/coverage/curves/: GEVSimilarityParameters.cpp.func-sort-c.html  GEVSimilarityParameters.cpp.func.html  GEVSimilarityParameters.cpp.gcov.html  MinUnknownUniverseCover.cpp.func-sort-c.html  MinUnknownUniverseCover.cpp.func.html  MinUnknownUniverseCover.cpp.gcov.html  ParametersEncoder.cpp.func-sort-c.html  ParametersEncoder.cpp.func.html  ParametersEncoder.cpp.gcov.html  ParametersKey.cpp.func-sort-c.html  ParametersKey.cpp.func.html  ParametersKey.cpp.gcov.html  ParametersKey.h.func-sort-c.html  ParametersKey.h.func.html  ParametersKey.h.gcov.html  Sorter.cpp.func-sort-c.html  Sorter.cpp.func.html  Sorter.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
other/GEVSimilarity/src/main/c++/algorithms/curves/: Defs.h  GEVSimilarityParameters.cpp  GEVSimilarityParameters.h  InParams.cpp  InParams.h  Makefile.am  Makefile.in  MinUnknownUniverseCover.cpp  MinUnknownUniverseCover.h  ParametersEncoder.cpp  ParametersEncoder.h  ParametersKey.cpp  ParametersKey.h  Sorter.cpp  Sorter.h
other/GEVSimilarity/src/main/java/algorithms/curves/: GEVSimilarityTool.java
other/GEVSimilarity/src/main/java/algorithms/util/: GEVSimilarityParametersPlotter.java
other/GEVSimilarity/src/main/resources/: plot_gev_similarity_parameters.html
other/GEVSimilarity/src/test/c++/algorithms/curves/: GEVSimilarityParameters_test.cpp  Makefile.am  Makefile.in  MinUnknownUniverseCover_test.cpp  ParametersEncoder_test.cpp  ParametersKey_test.cpp  Sorter_test.cpp
other/GEVSimilarity/src/test/java/algorithms/curves/: GEVSimilarityTool0Test.java  GEVSimilarityToolTest.java
other/GEVSimilarity/src/test/java/algorithms/util/: GEVSimilarityParametersPlotter.java
other/GEVSimilarity/tmpdata2/: test-data.txt
resources/: CMAEvolutionStrategy.properties  logging.properties  plot_3d_scatter.html  plot_3d_simplex_n10.html  plot_minima_stats.html  plot_points_and_polygon.html  plot_twoptcorrelation.html  scalespace.mf
src/: FineTunePretrainedObjectDetector_keras_hub.ipynb  README_venv.txt  duckies_and_statues,_interactive_eager_few_shot_obj_det_training_colab.ipynb  load_pytorch_models.py  load_statues.py  stats.py
src/algorithms/: BinarySearchTree.java  BinarySearchTreeThreaded.java  ConnectedPointsFinder.java  CountingSort.java  KSelect.java  LongestPath.java  MergeSort.java  MultiArrayMergeSort.java  PriorityQueueThorup.java  QuickSort.java  ResourceFinder.java  Rotate.java  SubsetChooser.java  YFastTrie.java
src/packing/: Intersection2DPacking.java
stylesheets/: stylesheet.css
testresources/: Hartley1997_house.txt  android_statues01.txt  android_statues02.txt  android_statues_01_label_coords.csv  android_statues_01_labelling.csv  android_statues_02_label_coords.csv  android_statues_02_labelling.csv  android_statues_03.txt  android_statues_03_label_coords.csv  android_statues_04_label_coords.csv  android_statues_05.txt  android_statues_06.txt  android_statues_07.txt  angles.tsv  arches.txt  arches_label_coords.csv  arches_sun_01.txt  arches_sun_01_label_coords.csv  arizona-sunrise-1342919937GHz_label_coords.csv  arizona_license.txt  berkeleySegSubset_README.txt  bike.txt  books_illum3_license.txt  books_illum3_v0_695x555_label_coords.csv  brown_lowe_2003.txt  brown_lowe_2003_image1.tsv  brown_lowe_2003_image1_infl_pts.tsv  brown_lowe_2003_image1_label_coords.csv  brown_lowe_2003_image2.tsv  brown_lowe_2003_image2_infl_pts.tsv  brown_lowe_2003_image2_label_coords.csv  brown_lowe_2003_matching.tsv  campus_010_label_coords.csv  campus_license.txt  checkerboard.txt  checkerboard_01_label_coords.csv  cloudy_san_jose.txt  cloudy_san_jose_label_coords.csv  coins.txt  colors.txt  (+37 more)
testresources/android_contours/: android_statues_01_contour_0.csv  android_statues_01_contour_1.csv  android_statues_01_contour_2.csv  (+299 more)
tmpdata/: andr02.txt
(+5154 files in other folders)
