AM_CXXFLAGS = -I$(top_srcdir)/src @AM_CXXFLAGS@

lib_LIBRARIES = libGEVSimilarityParameters.a

libGEVSimilarityParameters_adir = ../../../../../lib

libGEVSimilarityParameters_a_HEADERS = \
    GEVSimilarityParameters.h \
    ParametersKey.h \
    ParametersEncoder.h \
    Sorter.h \
    MinUnknownUniverseCover.h \
    Defs.h

libGEVSimilarityParameters_a_SOURCES = \
	$(libGEVSimilarityParameters_a_HEADERS) \
	ParametersKey.cpp \
	ParametersEncoder.cpp \
	Sorter.cpp \
	MinUnknownUniverseCover.cpp \
	GEVSimilarityParameters.cpp 
